# rotaflow

./: .commitlintrc.json  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  TEST_REPORT.md  docker-compose.multi-tenant.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  nginx.conf  policy.md  pyproject.toml  requirements-fastapi.txt  requirements.txt  users.json
.amazonq/rules/: chatInteractions.md  docker-best-practices.md  html-template-separation.md  python-best-practices.md
.github/workflows/: automerge.yml  ci.yml
app/: multi_tenant.py  tenant_db.py
app/auth/: auth.py  flask_auth.py  user_manager.py
app/core/: config.py  constants.py  router.py
app/handlers/: auth_handler.py  base_handler.py  calendar_handler.py  health_handler.py  swap_handler.py
app/models/: calendar_storage.py  rotation.py  schedule_optimizer.py  swap_manager.py
app/services/: auth_service.py  calendar_service.py  coverage_service.py  holiday_service.py  swap_service.py
app/templates/: auth_templates.py  calendar_templates.py  swap_templates.py
app/utils/: holidays.py
app/views/: analytics.py  clean_server.py  http_server.py  refactored_server.py  server.py
config/: team_config.json
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
scripts/: docker-health-check.sh
tests/: run_all_tests.py  test_docker.py  test_integration.py  test_units.py
todo/: 01_pto_integration.md  02_performance_tracking.md  03_coverage_matrix.md  04_policy_enforcement.md  05_reporting_analytics.md  README.md
(+8 files in other folders)
